[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy==1.21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
dependencies = [
    "mediapipe==0.10.9",
    "numpy==1.21.0",
    "streamlit==1.36.0",
    "tensorflow==2.14.0",
    "opencv-python-headless==4.5.3.56",
    "Pillow==8.3.1",
]
